# free-allegiance

./: .gitignore  .gitmodules  configure.ac  convert_json.py  dbg  fa.sh  setup.sh
src/: Makefile  Makefile.am  color.cpp  frame.cpp  geo.cpp  group_geo.cpp  image.cpp  light.cpp  lod_geo.cpp  main.cpp  mdlviewer.cpp  mesh_geo.cpp  model_definition.cpp  resource_manager.cpp  vector3.cpp
src/alleg_src/igc/: :w  Makefile  igc.h  pch.h
src/client/: Client  Client.cpp  ClientIgcSite  ClientIgcSite.cpp  Geo  Geo.cpp  Hud  Hud.cpp  InputManager  InputManager.cpp  Makefile  ModelManager  ModelManager.cpp  MyClusterSite  MyClusterSite.cpp  MyThingSite  MyThingSite.cpp  RenderManager  RenderManager.cpp  Renderable  client  client.cpp  exceptions  formatters  main.cpp
src/mdlviewer/: Makefile  mdlviewer.cpp
src/model/: Color  Color.cpp  Frame  Frame.cpp  Geo  Geo.cpp  GroupGeo  GroupGeo.cpp  Image  Image.cpp  LODGeo  LODGeo.cpp  Light  Light.cpp  Makefile  MeshGeo  MeshGeo.cpp  ModelDefinition  ModelDefinition.cpp  ResourceBase  ResourceBase.cpp  ResourceManager  ResourceManager.cpp  TextureGeo  TextureGeo.cpp  Vector3  Vector3.cpp  exceptions
src/renderer/: Makefile.am  model.hpp  ogl_common.hpp  ogl_model.cpp  ogl_model.hpp  ogl_renderer.cpp  ogl_renderer.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp  ogl_window.cpp  ogl_window.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  resource_exception.hpp  resource_manager.cpp  resource_manager.hpp  shader.hpp  texture.hpp  transform.cpp  transform.hpp  vector.hpp  window.hpp
(+34 files in other folders)
